Sonar Fixes (4) (#2210)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>